--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meus objetivos do ano_</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section class="conteudo-principal">
+    <section class="conteudo-principal">
     <h2 class="titulo-pricipal">meus objetivos do ano_</h2>
-
+<div class="botoes">
+<button class="botao ativo">cursos na alura</button>
+<button class="botao">criar projetos em javascript</button>
+<button class="botao">criar um portfolio</button>
+<button class="botao">atualizar meu currículo</button>
+</div>
+<div class="abas-textos">
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-pricipal">Estudar 4 cursos na Alura</h3>
+        <h4 class="aba-conteudo-titulo-segundario">Tempo para completa</div>r o objtivo</h4>
+   </div>
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-pricipal">Criar 5 projetos em Javascript</h3>
+        <h4 class="aba-conteudo-titulo-segundario">Tempo para completa</div>r o objtivo</h4>
+   </div>
+    <div class="aba-conteudo">
+    <h3 class="aba-conteudo-pricipal">Criar um portfolio com os meus 3 melhores projetos</h3>
+        <h4 class="aba-conteudo-titulo-segundario">Tempo para completa</div>r o objtivo</h4>
+   </div>
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-pricipal">Atualizar meu curricolo com os certificados da Alura</h3>
+        <h4 class="aba-conteudo-titulo-segundario">Tempo para completa</div>r o objtivo</h4>
+ </div>
 </section>
+<script src="main.js"></script>
 </body>
 </html>
